# nexusremote-p2p-system

./: .gitignore  Dockerfile  GITHUB_SYNC_DIAGNOSIS.md  LICENSE  NEXUSREMOTE_DEVELOPMENT_PLAN.md  NEXUSREMOTE_SKILLS_CONFIG.md  NEXUSREMOTE_SKILLS_USAGE.md  NEXUSREMOTE_TEST_GUIDE.md  NEXUSREMOTE_UBUNTU_PROTOTYPE.md  NEXUSREMOTE_WINDOWS_PROTOTYPE.md  PUSH_TO_GITHUB.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.1.md  RUST_SOLUTION_REPORT.md  SIMPLE_PUSH_INSTRUCTIONS.md  WINDOWS_INSTALLER_GUIDE.md  debug_routing.py  e2e_test.py  e2e_test_report.md  feishu_diagnosis.md  feishu_ip_whitelist_guide.md  feishu_no_reply_diagnosis.md  fix_rust_env.sh  github-helper.js  github-helper.sh  nexusremote-deployment-guide.md  nexusremote-final-demo.md  nexusremote-progress.sh  performance_results_20260321_150022.json  performance_test.py  push_to_github.sh  real_p2p_demo.rs  rust_diagnosis.sh  rustup_solution.sh  secure_config_tool.py  security_enhancement_plan.md  simple_message_encryption.py  simple_p2p.py  simple_real_p2p.py  (+4 more)
nexusremote/: Cargo.toml  DEVELOPMENT_STATUS.md  IMMEDIATE_EXECUTION_PLAN.md  PROGRESS_SUMMARY.md  README.md  STATUS_REPORT_20260227.md  build.sh  build_hybrid.sh  build_now.sh  build_with_complete_rust.sh  check_reputation.rs  complete_rust_solution.sh  demo_workflow.py  dev_workflow.md  final_rust_setup.sh  install_rust_offline.sh  minimal_test.rs  online_validation_plan.md  online_verification.rs  prepare_for_build.sh  rust_emergency_solution.sh  setup_rust_env.sh  simple_rust_install.sh  ultimate_solution.md  use_local_rust.sh  validate_core_algorithm.rs
nexusremote/src/: lib.rs
(+50 files in other folders)
