[package]
name = "nexusremote"
version = "3.0.0"
edition = "2021"
authors = ["NexusRemote Team"]
description = "A decentralized P2P remote control system with token incentives"
license = "MIT"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# P2P network dependencies
libp2p = { version = "0.53", features = [
    "tokio",
    "tcp",
    "quic",
    "noise",
    "kad",
    "relay",
    "identify",
    "ping",
    "gossipsub",
    "mdns",
] }
multihash = "0.19"
cid = "0.10"

# Cryptography and security
ed25519-dalek = "2.0"
rand = "0.8"
sha2 = "0.10"
blake3 = "1.0"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# Wallet and token economics
ring = "0.17"
base64 = "0.21"
hex = "0.4"

# WebSocket support
tokio-tungstenite = "0.20"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Video and remote control
h264-reader = "0.6"
# For input injection we'll use platform-specific crates later

# CLI
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
quickcheck = "1.0"
quickcheck_macros = "1.0"

# [[bench]]
# name = "routing_bench"
# harness = false
# 注释掉bench部分，稍后实现

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
